Fixed a few issues reported by FindBugs. There are still some warnings but they would be too dangerous to fix right now.